--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,87 +1,318 @@
 html{
-    font-family: serif;
-    font-size: 20px;
-    color: #142f43;
+    font-size: 16px;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 body{
     margin: 0;
-    padding: 0;
-    background: #ffab4c;
-}
-a{
-    text-decoration: none;
-    color: #142f43;
-    padding-bottom: 5px;
-    transition: all .3s ease;
-}
-a:hover{
-    color: #fff;
-    border-bottom: 1px solid #142f43;
-}
-header{
-    border-bottom: 2px solid #142f43;
-    margin-bottom: 75px;
+    background: #f5f8fa;
 }
 .wrapper{
     margin: 0 auto;
-    width: 80%;
+    width: 90%;
+}
+/* -------------------------header------------------------------ */
+header{
+    padding: 20px 0 ;
+    color: #f5f8fa;
+    background: black;
+    position: relative;
 }
 header .wrapper{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 }
-main div{
-    padding: 5px;
-    margin-bottom: 15px;
-    font-size: 25px;
+.menu-bmt{
+    cursor: pointer;
 }
-main .wrapper{
+.menu-bmt span{
+    display: block;
+    width: 20px;
+    height: 3px;
+    background: #f5f8fa;
+    margin-bottom: 3px;
+    border-radius: 50px;
+}
+.menu-bmt:hover span{
+    background: white;
+}
+.header-drop-list{
+    position: relative;
+}
+.drop-list{
+    visibility: hidden;
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 40%;
+    background: black;
+    color:white;
+    z-index: 10;
+}
+.index-menu{
+    padding: 20px;
+    background: linear-gradient(-90deg, rgba(0, 0, 0, .5), rgba(0, 0, 0, 1)), url("../img/index-bg.png"); 
+    background-position: center;
+}
+.book-menu{
+    padding: 20px;
+    background: linear-gradient(-90deg, rgba(0, 0, 0, .5), rgba(0, 0, 0, 1)), url("../img/book-bg.png"); 
+    background-position: center;
+}
+.podcast-menu{
+    padding: 20px;
+    background: linear-gradient(-90deg, rgba(0, 0, 0, .5), rgba(0, 0, 0, 1)), url("../img/podcast-bg.png"); 
+    background-position: center;
+}
+.sport-menu{
+    padding: 20px;
+    background: linear-gradient(-90deg, rgba(0, 0, 0, .5), rgba(0, 0, 0, 1)), url("../img/sport-bg.jpg"); 
+    background-position: bottom;
+}
+.about-us-menu{
+    padding: 20px;
+    background: linear-gradient(-90deg, rgba(0, 0, 0, .5), rgba(0, 0, 0, 1)), url("../img/team-bg.png"); 
+    background-color: #000;
+}
+.fxd_menu{
+    display: none;
+    width:100%;
+    height: 100%;
+    background:rgba(0, 0, 0, .5);
+}
+.ext_from_menu{
+    position: fixed;
+    right:10px;
+    top:10px;
+    background: red;
+    width: 25px;
+    height: 25px;   
+    background-size: cover;
+}
+.ext_from_menu div{
+    display: block;
+    width: 20px;
+    height: 3px;    
+    background: #000;
+    border-radius: 50px;
+}
+.logo_wrp{
     display: flex;
-    flex-direction:column;
-    align-items: center;
+    justify-content: space-between;
+    padding: 20px;
 }
-.title-exercise{
+.ext{
+    cursor: pointer;
+}
+header ul {
+    list-style-type:none;
+    padding: 0;
+    font-size: 1.2rem;
+    color:white;
+}
+header ul .index-gradient{
+    padding: 40px!important;
+}
+header ul .index-menu{
+    background-position: center;
+}
+header ul .book-menu{
+    background-position: center;
+}
+header ul .podcast-menu{
+    background-position: top;
+}
+header ul .sport-menu{
+    background-position: center;
+}
+header ul .about-us-menu{
+    background-position: top;
+}
+header li{
+    position: relative;
+    opacity: 0;
+    transition: all 1s ease;
+    background: #000;
+}
+header li:hover{
+    transform: translateX(10%);
+}
+header li a{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    text-decoration: none;
+    color: white;
+}
+.back_li{
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+.ui_wrp{
+    text-align: center;
+}
+/* --------------------------index------------------------- */
+article{
+    margin-bottom: 75px;
+    padding-bottom: 75px;
+    box-shadow: 0 2px  rgba(0,0,0,.1);
+}
+article:last-child{
+    margin-bottom: 0;
+}
+.header{
+    height: 60px;
+    background: #000;
+}
+.etered-text{
+    padding: 125px 0;
+    padding-top: 35vh;
+}
+.etered-text .introductory-text{
     margin-bottom: 50px;
 }
-.start-btm{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 150px;
-    height: 150px;
-    color: #ffab4c;
-    background: #142f43;
+.detailed-text{ 
+    text-align: right; 
+}
+li{
+    list-style: none;
+}
+.index-gradient{
+    padding: 125px 25px;
+    position: relative;
+    color: #f5f8fa;
+    /* background: linear-gradient(-90deg, rgba(0, 0, 0, .5), rgba(0, 0, 0, 1)); */
+    background-position: center; 
+    background-repeat: no-repeat; 
+    background-size: cover; 
+}
+.a-href{
+    display: inline-block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 2;
+}
+.introductory-text .wrapper{
+    transition: all 0.5s ease;
+}
+.introductory-text:hover .wrapper{
+    transform: scale(1.05);
+}
+.etered-text-mein{
+    text-align: center;
+    color: #f5f8fa;
+    background: linear-gradient(-90deg, rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url("../img/index-bg.png"); 
+    background-position: center;
+}
+.book-article .index-gradient{
+    background: linear-gradient(-90deg, rgba(0, 0, 0, .5), rgba(0, 0, 0, 1)), url("../img/book-bg.png"); 
+    background-position: center;
+}
+.podcast-article .index-gradient{
+    background: linear-gradient(-90deg, rgba(0, 0, 0, .5), rgba(0, 0, 0, 1)), url("../img/podcast-bg.png");
+    background-position: top;
+    background-size: cover; 
+}
+.sport-article .index-gradient{
+    background-image: linear-gradient(-90deg, rgba(0, 0, 0, .5), rgba(0, 0, 0, 1)), url("../img/sport-bg.jpg");
+}
+.scrollBox {
+    display: inline-block;
+    position: fixed;
+    right: 2vh;
+    bottom: 2vh;
+    z-index: 10;
+}
+.scrollBox .bg-a-top{
+    display: inline-block;
+    position: relative;
+    padding: 5px;
+    width: 25px;
+    height: 25px;
+    background: white;
+    border: 3px solid black;
     border-radius: 50%;
-    cursor: pointer;
-    transition: all .3s ease;
 }
-.start-btm:hover{
-   transform: scale(1.1);
+.top-arrow{
+    position: absolute;
+    top: 50%;
+    left: 48%;
+    transform: translate(-50%, -50%);
+
 }
-article{
-    margin-bottom: 25px;
-    transition: all .3s ease;
+.top-arrow polyline{
+    transform-origin: center;
+    transform:  rotate(180deg);
+} 
+/* -----------------------good-page----------------------------------- */
+.good-page{
+    box-shadow: none;
+    padding-bottom: 0;
 }
-article:hover{
-    transform: scale(1.025);
- }
-article span{
+.title-main{
+    text-align: center;
+}
+.goods-conteiner{
+    box-sizing: border-box;
+}
+.good{
+    display: inline-block;
+    position: relative;
+    width: 25%;
+    text-align: center;
+    background: #f5f8fa;
+    transition: all 0.5s ease;
+}
+.good:hover{
+    transform: scale(1.05);
+}
+.good-img{
+    display: inline-block;
+    max-width: 250px;
+    margin: 0 auto;
+    object-fit: cover;
+}
+.good img{
+    width: 100%;
+}
+.good-title{
+    padding-bottom: 5px;
+    margin-bottom: 5px;
+    border-bottom: 1px solid #000;
+}
+/* --------------------------------about us---------------------------------- */
+.main-person{
+    padding-top: 0;
+}
+.main-person .index-gradient{
+    padding: 150px 0;
+    background-image: linear-gradient(-90deg, rgba(0, 0, 0, .7), rgba(0, 0, 0, 1)), url("../img/team-bg.png");
+    background-position: top;
+    background-size: cover; 
+}
+.person .index-gradient{
+    background: linear-gradient(rgba(0, 0, 0, .9), rgba(0, 0, 0, .9));
+    background-position: top;
+    background-size: cover; 
+}
+.person .introductory-text .wrapper{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    align-items: center;
 }
-.exercise-title h2{
-    margin: 0;
+.about-us-text{
+    width: 60%;
 }
-.exercise-description{
-    padding: 0;
-    margin-right: 15px;
-}
-.exercise-description p{
-    margin: 0;
-}
-.exercise-img span{
-    display: block;
+.about-us-img{
     width: 150px;
-    height: 150px;
-    background: #142f43;
+}
+.about-us-img img{
+    object-fit: cover;
+    width: 100%;
 }
